// Copyright 2023 Intrinsic Innovation LLC

syntax = "proto3";

package intrinsic_proto;

message TestMessage {
  string string_value = 1;
}
